Implemented optional features and completed README

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 .stats-container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .stats-container:hover {
@@ -35,6 +36,7 @@ body {
     margin: 1%;
     width: 100%;
     text-align: center;
+    flex: max-content;
 }
 
 #num-contributions, #total-raised, #num-games {
@@ -77,4 +79,9 @@ button {
     padding: 1%;
     margin: 1%;
     border-radius: 7px;
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
 }
